Fixed slight alignment issue caused by accidental merge.

--- a/app/en/(modules)/navigation.module.css
+++ b/app/en/(modules)/navigation.module.css
@@ -22,7 +22,7 @@
 
 .container > nav > a
 {
-    margin-left: 100px;
+    margin-right: 100px;
 }
 
 .container > nav > a > span
