--- a/app/en/(sections)/hero.module.css
+++ b/app/en/(sections)/hero.module.css
@@ -26,7 +26,7 @@
 
 .nav_spacer
 {
-    height: 100px;
+    height: 20vh;
     width: 100vw;
 }
 
@@ -44,6 +44,14 @@
     width: 650px;
 }
 
+
+.container > div > header > div > p
+{
+    font-family: "Inter", sans-serif;
+    font-size: 1.4em;
+    font-weight: 200;
+}
+
 .container > div > header > div:first-child > h1 > span
 {
     background: var(--secondary);
@@ -51,13 +59,19 @@
     -webkit-text-fill-color: transparent;
 }
 
+.container > div > header > div:last-child > img
+{
+    width: 40vw;
+    height: 55vh;
+}
+
 .buttons
 {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    width: 650px;
-    margin-top: 150px;
+    width: 33vw;
+    margin-top: 15vh;
 }
 
 .primary_button, .secondary_button
@@ -66,10 +80,10 @@
     border: 0;
     text-transform: uppercase;
     font-weight: bold;
-    font-size: 20px;
+    font-size: 1.025em;
     font-family: "Josefin Sans";
-    width: 300px;
-    height: 75px;
+    width: 15vw;
+    height: 7.5vh;
     cursor: pointer;
 }
 
